--- a/book-shop/src/components/nav_style.css
+++ b/book-shop/src/components/nav_style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
 :root{
     --main-color:#E5E5E5;
     --main-color2: #E87121;
@@ -10,8 +10,7 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    font-family: "Lato", sans-serif;
-
+    font-family: 'Lato', sans-serif;
 }
 
 header{
@@ -25,9 +24,10 @@ header{
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    font-size: 1.2rem;
     height:80px;
     background-color: #E87121;
+    box-shadow: 0 4px 2px -2px gray;
+    width:100%;
 
 }
 
@@ -62,8 +62,7 @@ ul{
     font-size: 1.5rem;
 }
 .nav-links{
-    padding:30px;
-    padding-bottom: 0;
+    padding: 30px;
 }
 .nav-links:hover{
     color: black;
@@ -71,8 +70,10 @@ ul{
 
 a{
     color:white;
-    font-family: "Lato", sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
     text-decoration: none;
+    font-size: 1.3rem;
 
 }
 .text-highlight{
