Minor styling change

--- a/book-shop/src/pages/home.css
+++ b/book-shop/src/pages/home.css
@@ -51,6 +51,7 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding:50px;
 }
 .offer_intro{
     width:50vw;
