More functionality with routers

--- a/book-shop/src/pages/store.css
+++ b/book-shop/src/pages/store.css
@@ -1,10 +1,32 @@
+.shop_container{
+    display: flex;
+    align-self: center;
+    justify-content: center;
+}
+
 .cards_container{
-    width:500px;
+    width:40%;
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;
+    align-self: center;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #E87121;
+    gap:10px;
 }
 .card_img{
-    max-width:200px;
-    max-height:400px;
+    width:200px;
+    height:300px;
+}
+
+
+.cards_container li{
+    width:40%;
+    background-color: white;
+    color: black;
+}
+.cards_container li a{
+    padding:0px;
+    color: black;
 }
