--- a/book-shop/src/pages/home.css
+++ b/book-shop/src/pages/home.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
 :root{
     --main-color:#E5E5E5;
-    --main-color2: #E87121;
+    --main-color2: rgba(0, 0, 0, 0.77);
 
 }
 
