--- a/book-shop/src/pages/product.css
+++ b/book-shop/src/pages/product.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap:50px;
+    padding-bottom: 30px;
 }
 
 .hero{
@@ -10,10 +11,109 @@
     justify-content: space-evenly;
     align-items: center;
     align-self: center;
-    border:1px solid black;
+    padding:50px;
+    background-color: rgba(255, 255, 255, 0.7);
+
 }
 
 .hero img{
-    width:250px;
-    height:400px;
+    width: 20vw;
+    height:32vw;
+    cursor: pointer;
+    transition: 0.3s all 0ms;
+}
+.hero img:hover{
+    transform: scale(1.1);
+    transition: 0.3s all 0ms;
+
+}
+.book_details{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    width:20%;
+}
+
+.go_back{
+    padding:0 15px;
+}
+
+.uil-arrow-left{
+    color:  white !important;
+    font-size: 1.5rem;
+}
+
+.go_back:hover .uil-arrow-left{
+    color:  black !important;
+}
+
+
+.description{
+    width:80vw;
+    justify-content: space-evenly;
+    align-items: center;
+    align-self: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding:20px;
+}
+
+.description h3{
+    font-size: 1.2rem;
+
+}
+.titles_container{
+    width:100%;
+    display: flex;
+    gap:10px;
+    border-bottom: 2px solid grey;
+}
+h3 .text-highlight{
+    color: #03a1af;
+    cursor: pointer;
+    border-bottom: 2px solid #03a1af;
+}
+.text-highlight2{
+    cursor: pointer;
+}
+.text-highlight2:hover{
+    color: #03a1af;
+}
+
+.description p{
+    padding-top: 20px;
+}
+
+
+.related_container{
+    background-color: rgba(255, 255, 255, 0.7);
+    width:80vw;
+    align-items: center;
+    align-self: center;
+    padding:20px;
+
+}
+
+.related{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-self: start;
+    gap:5vw;
+    padding-top:5vh;
+}
+
+.related a{
+    width:15vw;
+}
+.related img{
+    width: 15vw;
+    height:25vw;
+    transition: 0.3s all 0ms;
+    padding-bottom: 20px;
+}
+
+.related img:hover{
+
+    transform: scale(1.1);
+    transition: 0.3s all 0ms;
 }
