--- a/book-shop/src/components/nav_style.css
+++ b/book-shop/src/components/nav_style.css
@@ -66,7 +66,7 @@ ul{
     transition: 0.3s all 0ms;
 }
 .nav-links:hover{
-    color: black;
+    color: rgb(225, 189, 189);
 
 }
 
@@ -84,7 +84,7 @@ a{
 }
 
 .nav-links:hover .text-highlight{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(225, 189, 189);
 
 }
 
