First prototype finished

--- a/book-shop/src/pages/cart.css
+++ b/book-shop/src/pages/cart.css
@@ -46,3 +46,15 @@ td{
     transition: 0s;
     color:white;
 }
+
+.checkout {
+    text-align: center;
+}
+.checkout h3{
+    font-size: 2rem;
+}
+.checkout h4{
+    font-size: 1.7rem;
+}
+
+
